Add link to PR for review feedback.

--- a/examples/toolbar/toolbar.html
+++ b/examples/toolbar/toolbar.html
@@ -38,8 +38,9 @@
   <main>
   <h1>Toolbar Example</h1>
   <p>
-    <strong>NOTE:</strong> Please provide feedback on this example page in
-    <a href="https://github.com/w3c/aria-practices/issues/539">issue 539.</a>
+    <strong>NOTE:</strong> This example has been redesigned and is now ready for final review before publication in APG Release 3.
+    Please provide feedback in
+    <a href="https://github.com/w3c/aria-practices/pull/950">pull request 950.</a>
   </p>
   <p>
     The following example of an editor toolbar implements the
