chore: Use cheerio for HTML replacement

--- a/examples/index.html
+++ b/examples/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" lang="en-US" xml:lang="en-US">
 <head>
-  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-  <meta content="width=device-width, initial-scale=1.0" name="viewport" />
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
   <title>Index of ARIA Design Pattern Examples | WAI-ARIA Authoring Practices 1.1</title>
   <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
   <link rel="stylesheet" href="css/core.css">
@@ -332,7 +332,7 @@
                 <li><a href="treeview/treeview-2/treeview-2b.html">Navigation Treeview  Using Declared Properties</a></li>
               </ul>
             </td>
-          </tr>        </tbody>
+          </tr></tbody>
       </table>
     </section>
     <section id="examples_by_props">
@@ -713,13 +713,13 @@
                 <li><a href="toolbar/toolbar.html">Toolbar</a></li>
               </ul>
             </td>
-          </tr>
-        </tbody>
+          </tr></tbody>
       </table>
     </section>
   </main>
   <nav aria-label="ARIA Practices">
     <a href="../">WAI-ARIA Authoring Practices 1.1</a>
   </nav>
-</body>
-</html>
+
+
+</body></html>
