--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -271,7 +271,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-test-id="carousel-key-enter-or-space">
                 <th><kbd>Enter</kbd> or <kbd>Space</kbd></th>
                 <td>
                   Moves content to the next or previous slide in the image carousel.
@@ -298,7 +298,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-test-id="carousel-region-role">
                 <th scope="row">
                   <code>region</code>
                 </th>
@@ -323,7 +323,7 @@
                 </td>
                 <td>Provides a label that describes the carousel region.</td>
               </tr>
-              <tr>
+              <tr data-test-id="carousel-group">
                 <th scope="row">
                   <code>group</code>
                 </th>
@@ -338,7 +338,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="carousel-aria-roledescription">
                 <td></td>
                 <th scope="row">
                   <code>aria-roledescription=<q>slide</q></code>
@@ -348,7 +348,7 @@
                 </td>
                 <td>Identifies the group as a <q>slide</q> content.</td>
               </tr>
-              <tr>
+              <tr data-test-id="carousel-aria-label">
                 <td></td>
                 <th scope="row">
                   <code>aria-label=<q><em>N</em> of 6</q></code>
@@ -358,7 +358,7 @@
                 </td>
                 <td>Identifies the number of the slide in the group of 6 slides.</td>
               </tr>
-              <tr>
+              <tr data-test-id="carousel-aria-describedby">
                 <td></td>
                 <th scope="row">
                   <code>aria-describedby=<q>IDREF</q></code>
@@ -384,7 +384,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-test-id="carousel-aria-live-off">
                 <td></td>
                 <th scope="row">
                   <code>aria-live=<q>off</q></code>
@@ -399,7 +399,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="carousel-aria-live-polite">
                 <td></td>
                 <th scope="row">
                   <code>aria-live=<q>polite</q></code>
@@ -430,7 +430,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-test-id="carousel-button-role">
                 <th scope="row">
                   <code>button</code>
                 </th>
@@ -463,7 +463,7 @@
               </tr>
             </thead>
             <tbody>
-              <tr>
+              <tr data-test-id="carousel-button-role">
                 <th scope="row">
                   <code>button</code>
                 </th>
@@ -478,7 +478,7 @@
                   </ul>
                 </td>
               </tr>
-              <tr>
+              <tr data-test-id="carousel-aria-label">
                 <td></td>
                 <th scope="row">
                   <code>aria-label=<q><em>name</em></q></code>
@@ -488,7 +488,7 @@
                 </td>
                 <td>Defines the accessible name for the next and previous slide buttons.</td>
               </tr>
-              <tr>
+              <tr data-test-id="carousel-aria-controls">
                 <td></td>
                 <th scope="row">
                   <code>aria-controls=<q>IDREF</q></code>
