--- a/examples/carousel/carousel-1/carousel-1.html
+++ b/examples/carousel/carousel-1/carousel-1.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Example of Image Carousel with Automatically Rotating Images | WAI-ARIA Authoring Practices 1.1</title>
+    <title>Auto-Rotating Image Carousel Example | WAI-ARIA Authoring Practices 1.1</title>
 
     <!--  Core js and css shared by all examples; do not modify when using this template. -->
     <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -29,18 +29,18 @@
       </ul>
     </nav>
     <main>
-      <h1>Example of Image Carousel with Automatically Rotating Images</h1>
-        <p>
-          Comments on this example are tracked in
-          <a href="https://github.com/w3c/aria-practices/issues/458">issue 458.</a>
-        </p>
+      <h1>Auto-Rotating Image Carousel Example</h1>
       <p>
-          This example section demonstrates a <a href="../../../#carousel">design pattern for a image carousel</a> consisting of a pause button, next and previous slide buttons.
-          In this example, when the page is loaded the carousel images start rotating automatically.
-          The auto rotation can be stopped by activating the pause button, just moving keyboard focus to any control or link in the carousel or hovering the over carousel content with a mouse.  There are two ways for the user to restart rotation, pressing the pause button again or moving the pointer outside the carousel image area.
-          For additional guidance, see <a href="../../../#kbd_selection_follows_focus">Deciding When to Make Selection Automatically Follow Focus</a>.
+        Comments on this example are tracked in
+        <a href="https://github.com/w3c/aria-practices/issues/458">issue 458.</a>
       </p>
-
+      <p>
+        The following example implementation of the
+        <a href="../../../#carousel">carousel design pattern</a>
+        demonstrates features of the pattern that are essential to accessibility for carousels that automatically start rotating when the page loads.
+        For instance, Rotation stops when users move focus to any control or link in the carousel or hover the mouse over carousel content.
+        The accessibility features section that follows the example describes these features in detail.
+      </p>
 
       <section>
         <h2 id="ex_label">Example</h2>
@@ -213,24 +213,35 @@
           </div>
         <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
       </section>
-
-
-      <h2>Accessibility Features</h2>
-      <ul>
-        <li>
-          Image rotation stops when keyboard focus enters the controls or content of the carousel.
-        </li>
-        <li>
-          Pause button is to provide a means of screen reader users using review mode to be aware of auto-updating content and stop the rotation.
-        </li>
-        <li>
-          To improve readability of the caption text and content, background contrast is improved by decreasing the transparency of the caption area.   This improves the color contrast radio of the white text, especially when light colored image are used in the background.
-        </li>
-      </ul>
+      
+      <section>
+        <h2>Accessibility Features</h2>
+        <ul>
+          <li>To stop automatic rotation:
+            <ul>
+              <li>Mouse users can move the mouse over the carousel content.</li>
+              <li>Keyboard users can use <kbd>Tab</kbd> to move focus into the carousel.</li>
+              <li>
+                Screen reader users using a reading cursor that does not move the mouse or keyboard focus can activate a button that stops rotation.
+                This rotation control bbutton is located off screen when it does not have keyboard focus, and it is the first item in the reading order inside the carousel region.
+                Thus, when reading the page sequentially, the button label informs users of the subsequent automatic changes to content that can interfere with their ability to read and provides an opportunity to stop them.
+              </li>
+            </ul>
+          </li>
+          <li>To resume automatic rotation:
+            <ul>
+              <li>As long as the off-screen stop button has not been activated, the Automatic rotation restarts when the mouse pointer and keyboard focus are outside the carousel.</li>
+              <li>Activate the start rotation button.</li>
+            </ul>
+          </li>
+          <li>
+            To improve readability of the caption text and content, background contrast is improved by decreasing the transparency of the caption area.   This improves the color contrast radio of the white text, especially when light colored image are used in the background.
+          </li>
+        </ul>
+      </section>
 
       <section>
         <h2 id="kbd_label">Keyboard Support</h2>
-
         <section>
           <h3 id="kbd_label_2">Pause Slide Rotation Button</h3>
           <table aria-labelledby="kbd_label_2" class="def">
